docs/content/gloo_routing/virtual_services/security/ldap/vs-auth-ldap.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  displayName: echo
  virtualHost:
    domains:
    - '*'
    routes:
    - matcher:
        prefix: /echo
      routeAction:
        single:
          upstream:
            name: default-http-echo-5678
            namespace: gloo-system
    virtualHostPlugins:
      extensions:
        configs:
          extauth:
            configs:
            - ldap:
                address: "ldap.default.svc.cluster.local:389" # Substitute your namespace for `default` here
                userDnTemplate: "uid=%s,ou=people,dc=solo,dc=io"
                allowedGroups:
                - "cn=managers,ou=groups,dc=solo,dc=io"
